# chat-my-doc-llms

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  deploy_cloud_run.yaml
src/api/: main.py
src/chat_my_doc_llms/: chats.py  gateway.py  main.py  service.py
src/chat_my_doc_llms/deploy/: __init__.py  model.py  service.py
src/deploy/: README.md  ansible.cfg  docker-compose.yml  inventory.yml
src/deploy/playbooks/: configure-network.yml  deploy-mistral.yml  restart-mistral-app.yml
src/deploy/playbooks/roles/bentoml/tasks/: main.yml
src/deploy/playbooks/roles/docker/tasks/: main.yml
src/deploy/playbooks/roles/uv/tasks/: main.yml
src/deploy/templates/: .env.j2  nginx.conf.j2
src/deploy/vars/: main.yml  vault.yml
src/notebooks/: rag_with_doc_in_gcs.ipynb  tuto_rag.ipynb
tests/unit/: test_chats.py  test_gateway.py  test_service.py
tests/unit/deploy/: test_service.py
