[project]
name = "chat-my-doc-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.29.0",
    "loguru>=0.7.3",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "langgraph>=0.5.4",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
]
