[project]
name = "chat-my-doc-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.20",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.29.0",
    "loguru>=0.7.3",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "langgraph>=0.5.4",
    "mypy>=1.17.1",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]
