[project]
name = "chat-my-doc-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "ansible>=11.9.0",
    "bentoml>=1.4.20",
    "bitsandbytes>=0.45.0 ; sys_platform == 'linux'",
    "datasets>=2.14.4",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.29.0",
    "httpx>=0.28.1",
    "huggingface-hub[cli,hf-transfer]>=0.34.4",
    "loguru>=0.7.3",
    "optimum>=1.27.0",
    "protobuf>=6.32.0",
    "pyarrow>=12.0.0,<18.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]

[tool.uv]
package = true

[dependency-groups]
de = []
dev = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "mypy>=1.17.1",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]

[tool.mypy]
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
    "ignore::DeprecationWarning:.*SwigPy.*",
]
